Change Log:

Dec 28, 2007 - Jim Clark
- Consolidated a lot of fixed strings scatetred though out app into static strings to
   help prevent fat fingers and what not and to create more readable code. Still more to
   do, especialy in Quantity(), but I got most of them.
- Fixed bug with Salt check boxes not adding/removeing salt from recipe (addActionListner())
- Fixed water calc bug where app was telling user to add salts when they already had the target
   value or higher.
- Fixed shallow copy of Salt out of database into (partial) deep copy
- First run at acidification (needs save/load/print and options)

Dec 27, 2007 - Jim Clark
- Save/load/export added for water profile and salts
- A few bugs with implementation of water treatment cleaned up
- A bug with notes display in xlst fixed 
- Default Water profile in options and prefs dialog
- TODO: allow user to add water profiles without having to manual edit DB files

Dec 25, 2007 - Jim Clark
- Basic structure for Water Treatment and Brewing Salts
  - GUI started
  - Water and salt database implemented
  - Water and salts added to Recipe
  - Basic salt calulations
  - TODO: acid calcs/gui, save/load into xml, xlst printing, options

Dec 20, 2007 - Jim Clark
- Added keg line length to carb panel and options
- Added conversion tool dialog for pressure, temp, gravity, volume and weight

Dec 19, 2007 - Jim Clark
- Properties for carb panel implemented
- Export to html for carb implemented
- Quantity.Converter and ilk now static so a nre Quanity object doesn't need to be instantiated to 
   convert a weight or volume

Dec 18, 2007 - Jim Clark
- Completed functionality of carbonation panel, still doesn't have selectable default settings in
   options dialog.
- Rolled back useing malts.csv and added a new prime_sugar.csv, which is used.

Dec 14, 2007 - Jim Clark
- Completed fermentation schedual functionality (save and xml->html export)